--- a/pixi.toml
+++ b/pixi.toml
@@ -8,3 +8,10 @@ version = "0.1.0"
 [tasks]
 
 [dependencies]
+python = ">=3.14.2,<3.15"
+jupyter = ">=1.1.1,<2"
+scikit-learn = ">=1.8.0,<2"
+scikit-image = ">=0.25.2,<0.26"
+numpy = ">=2.3.5,<3"
+matplotlib = ">=3.10.8,<4"
+tqdm = ">=4.67.1,<5"
